// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders CSF2Secondary story 1`] = `
<div>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      Children coming from story args!
    </button>
  </div>
</div>
`;

exports[`Renders CSF2StoryWithParamsAndDecorator story 1`] = `
<div>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      foo
    </button>
  </div>
</div>
`;

exports[`Renders CSF3Button story 1`] = `
<div>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      foo
    </button>
  </div>
</div>
`;

exports[`Renders CSF3ButtonWithRender story 1`] = `
<div>
  <div>
    <div>
      <p
        data-testid="custom-render"
      >
        I am a custom render function
      </p>
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</div>
`;

exports[`Renders CSF3InputFieldFilled story 1`] = `
<div>
  <div>
    <input
      data-testid="input"
    />
  </div>
</div>
`;

exports[`Renders CSF3Primary story 1`] = `
<div>
  <div>
    <button
      class="storybook-button storybook-button--large storybook-button--primary"
      type="button"
    >
      foo
    </button>
  </div>
</div>
`;

exports[`Renders LoaderStory story 1`] = `
<div>
  <div>
    <div>
      <div
        data-testid="loaded-data"
      >
        loaded data
      </div>
      <div
        data-testid="spy-data"
      >
        mockFn return value
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders WithActionArg story 1`] = `
<div>
  <div>
    <button />
  </div>
</div>
`;

exports[`Renders WithActionArgType story 1`] = `
<div>
  <div>
    <div>
      nothing
    </div>
  </div>
</div>
`;
